samples/_failures_safe/1761521255_c268ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c151324.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_4c151324.c:136:12: error: missing terminating " character
  136 |     printf("
      |            ^
./samples/SAFE/__tmp_4c151324.c:136:5: error: expected expression at end of input
  136 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_4c151324.c:136:5: error: expected declaration or statement at end of input
